...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moodDetail_locationImg"
        app:srcCompat="@drawable/ic_add_circle_grey_24dp" />

    <TextView
        android:id="@+id/moodDetail_dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="September 8, 2019"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/detailedView_back"
        app:layout_constraintStart_toEndOf="@+id/detailedView_moodImg"
        app:layout_constraintTop_toTopOf="@+id/detailedView_moodImg" />

    <TextView
        android:id="@+id/moodDetail_timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="04:45"
        android:textColor="@color/colorPrimary"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="@+id/moodDetail_dateText"
        app:layout_constraintTop_toBottomOf="@+id/moodDetail_dateText" />

    <TextView
        android:id="@+id/moodDetail_moodText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-light"
        android:text="EMOTIONAL"
        android:textColor="@color/colorPrimary"
...
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="#D5D5D5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailedView_edit" />

    <TextView
        android:id="@+id/detailedView_reasonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:fontFamily="sans-serif-light"
        android:text='"Good Weather"'
        android:textSize="14sp"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:clickable="true"
        app:backgroundTint="@color/color_button_lightGrey"
        app:fabCustomSize="40dp"
        app:layout_constraintStart_toStartOf="@+id/detailedView_delete"
        app:layout_constraintTop_toBottomOf="@+id/detailedView_delete"
        app:srcCompat="@drawable/ic_edit_black_24dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/detailedView_delete"
        android:layout_width="wrap_content"
...
