<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mood_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:clipToPadding="false"
        android:paddingTop="10dp"
        android:paddingBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/home_filterBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:soundEffectsEnabled="true"
        app:backgroundTint="@color/color_button_lightGrey"
        app:fabCustomSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/home_delete"
        app:layout_constraintTop_toBottomOf="@+id/home_delete"
        app:srcCompat="@drawable/ic_add_black_24dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:soundEffectsEnabled="true"
        app:backgroundTint="@color/color_button_lightGrey"
        app:fabCustomSize="40dp"
        app:layout_constraintStart_toStartOf="@+id/home_filterBtn"
        app:layout_constraintTop_toBottomOf="@+id/home_filterBtn"
        app:srcCompat="@drawable/ic_delete_black_24dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:soundEffectsEnabled="true"
        app:backgroundTint="@color/color_button_lightGrey"
        app:fabCustomSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_map_black_24dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_filterBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:soundEffectsEnabled="true"
        app:backgroundTint="@color/color_button_lightGrey"
        app:fabCustomSize="40dp"
        app:layout_constraintStart_toStartOf="@+id/home_map"
        app:layout_constraintTop_toBottomOf="@+id/home_map"
        app:srcCompat="@drawable/ic_filter_list_black_24dp" />


</androidx.constraintlayout.widget.ConstraintLayout>