...
                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">


                                <EditText
                                    android:id="@+id/reason_EditView"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:layout_marginBottom="8dp"
                                    android:background="@drawable/edittext_round"
                                    android:ems="10"
...
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintHorizontal_bias="0.721"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <com.google.android.material.floatingactionbutton.FloatingActionButton
                                    android:id="@+id/moodhistory_locationButton"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="8dp"
                                    android:clickable="true"
                                    app:backgroundTint="@color/color_button_lightGrey"
                                    app:fabCustomSize="35dp"
...
                                    app:layout_constraintTop_toBottomOf="@+id/addMood_twoMoreBtn" />

                            </androidx.constraintlayout.widget.ConstraintLayout>
                        </androidx.cardview.widget.CardView>

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/add_confirm"
                            android:layout_width="wrap_content"
                            android:layout_height="45dp"
                            android:layout_marginTop="64dp"
                            android:layout_marginBottom="64dp"
                            android:clickable="true"
                            app:backgroundTint="@color/button_brown"
...

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/moodSelect_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:elevation="10dp"
                    app:layout_constraintTop_toTopOf="parent">
...
